security/envoy-client-http-sds.yaml
static_resources:
  listeners:
  - name: listener_static0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10011
    filter_chains: [{}]
  - name: limesh_outbound_18080
    address:
      pipe:
        path: /home/xinli1/tmp/envoy-client-http.sock
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: outbound_0.0.0.0_18080
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              dynamic_stats: false
          route_config:
            name: envoy_benchmark_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: fortio_http_cluster
          tracing:
            client_sampling:
              value: 0
            random_sampling:
              value: 0
            overall_sampling:
              value: 0
          generate_request_id: false
          use_remote_address: false
          upgrade_configs:
          - upgrade_type: websocket
          stream_idle_timeout: 0s
          normalize_path: true
          request_id_extension:
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
              use_request_id_for_trace_sampling: true
          path_with_escaped_slashes_action: KEEP_UNCHANGED
    listener_filters:
    - name: envoy.filters.listener.http_inspector
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
    listener_filters_timeout: 0s
    enable_reuse_port: true
    continue_on_listener_filters_timeout: true
  clusters:
  - name: fortio_http_cluster
    type: STATIC
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: fortio_http_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 18080
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificate_sds_secret_configs:
            - name: client_cert
              sds_config:
                resource_api_version: V3
                api_config_source:
                  api_type: GRPC
                  transport_api_version: V3
                  grpc_services:
                    envoy_grpc:
                      cluster_name: sds_server_uds
          validation_context_sds_secret_config:
              name: validation_context
              sds_config:
                resource_api_version: V3
                api_config_source:
                  api_type: GRPC
                  transport_api_version: V3
                  grpc_services:
                    envoy_grpc:
                      cluster_name: sds_server_uds
  - name: sds_server_uds
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: sds_server_uds
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: /tmp/sds.unix
node:
  cluster: foo-cluster
  id: sidecar~10.0.0.1~polarisfooenvoy1~linkedin.com

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9912
